--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "start:build": "ng build",
+    "build": "ng build --aot --build-optimizer --optimization --progress --vendor-chunk  --named-chunks",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "prod": "ng build --aot --build-optimizer --optimization --progress --output-hashing none && node ./productionClear.js"
+    "prod": "ng build --aot --build-optimizer --optimization --progress --vendor-chunk  --named-chunks --output-hashing none && node ./productionClear.js"
   },
   "private": true,
   "dependencies": {
@@ -25,16 +26,23 @@
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
+    "@angular-builders/custom-webpack": "^16.0.1",
     "@angular-devkit/build-angular": "^16.2.4",
     "@angular/cli": "^16.2.4",
     "@angular/compiler-cli": "^16.2.0",
     "@types/jasmine": "~4.3.0",
+    "clean-webpack-plugin": "^4.0.0",
+    "css-loader": "^6.8.1",
+    "html-webpack-plugin": "^5.5.3",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "mini-css-extract-plugin": "^2.7.6",
+    "style-loader": "^3.3.3",
+    "ts-loader": "^9.5.0",
     "typescript": "~5.1.3"
   }
 }
